@@ -1,5 +1,6 @@
 == master
 
+* Raise an exception if equality is performed with an invalid enumeration identifier
 * Change how the base module is included to prevent namespacing conflicts
 
 == 0.2.4 / 2008-08-31
